Adding new changeS

--- a/sqlalchemy_challenge.ipynb
+++ b/sqlalchemy_challenge.ipynb
@@ -1428,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1452,34 +1452,32 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>date</th>\n",
        "      <th>prcp</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2016-08-23</td>\n",
+       "      <th>2016-08-23</th>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2016-08-24</td>\n",
+       "      <th>2016-08-24</th>\n",
        "      <td>0.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2016-08-25</td>\n",
+       "      <th>2016-08-25</th>\n",
        "      <td>0.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2016-08-26</td>\n",
+       "      <th>2016-08-26</th>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2016-08-27</td>\n",
+       "      <th>2016-08-27</th>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1487,15 +1485,16 @@
        "</div>"
       ],
       "text/plain": [
-       "         date  prcp\n",
-       "0  2016-08-23  0.00\n",
-       "1  2016-08-24  0.08\n",
-       "2  2016-08-25  0.08\n",
-       "3  2016-08-26  0.00\n",
-       "4  2016-08-27  0.00"
+       "            prcp\n",
+       "date            \n",
+       "2016-08-23  0.00\n",
+       "2016-08-24  0.08\n",
+       "2016-08-25  0.08\n",
+       "2016-08-26  0.00\n",
+       "2016-08-27  0.00"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1503,6 +1502,7 @@
    "source": [
     "new_df = pd.DataFrame(year_precip)\n",
     "new_df = new_df.dropna()\n",
+    "new_df = new_df.set_index('date')\n",
     "new_df.head()"
    ]
   },
@@ -1531,16 +1531,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8849b9f0f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f7f67328d30>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1557,7 +1557,8 @@
    ],
    "source": [
     "#05: Matplotlib, 02, 02 \n",
-    "prcp_graph = new_df.plot(x= 'date', rot = 90)\n",
+    "#prcp_graph = new_df.plot(x= 'date', rot = 90)\n",
+    "prcp_graph = new_df.plot(rot = 90)\n",
     "\n",
     "#plt.xticks(tick_locations, new_df[\"date\"], rotation=\"vertical\")\n",
     "prcp_graph"
@@ -1565,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1641,7 +1642,7 @@
        "max       6.700000"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1668,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1810,7 +1811,7 @@
        "8 -157.80250      152.4  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1823,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1842,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1859,7 +1860,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1872,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1881,7 +1882,7 @@
        "'USC00519281'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1894,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1903,20 +1904,21 @@
        "[(54.0, 54.0)]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Most active station lowest temp\n",
+    "#lowest_temp = session.query(Measurement.tobs, func.min(Measurement.tobs)).filter_by(station = most_active_id).all()\n",
     "lowest_temp = session.query(Measurement.tobs, func.min(Measurement.tobs)).filter_by(station = most_active_id).all()\n",
     "lowest_temp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1925,7 +1927,7 @@
        "[(85.0, 85.0)]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1938,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1947,7 +1949,7 @@
        "[(70.0, 71.66378066378067)]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1960,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1988,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2348,7 +2350,7 @@
        " ('2017-08-18', 79.0)]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2362,7 +2364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2429,7 +2431,7 @@
        "4  2016-08-27  75.0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2441,17 +2443,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f8849e6c668>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f7f67022b70>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2471,12 +2473,16 @@
     "#Add axis titles\n",
     "#Fix legend\n",
     "date_tobs_hist = date_tobs_df.hist(bins = 12)\n",
+    "#ax.set_xlim(\"x label\")\n",
+    "#date_tobs_hist = plt.hist(x, bins = number of bins)\n",
+    "#plt.xlabel(\"Temperature\")\n",
+    "#plt.ylabel(\"Frequency\")\n",
     "date_tobs_hist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
