--- a/sqlalchemy_challenge.ipynb
+++ b/sqlalchemy_challenge.ipynb
@@ -128,6 +128,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -1537,7 +1544,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa2a93ad0f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8c551f9fd0>"
       ]
      },
      "execution_count": 23,
@@ -1902,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1911,7 +1918,7 @@
        "[(54.0)]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1925,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1934,7 +1941,7 @@
        "[(85.0)]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1947,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1956,7 +1963,7 @@
        "[(71.66378066378067)]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2450,17 +2457,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7fa2aa1b39e8>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f8c554d21d0>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2494,7 +2501,7 @@
    "outputs": [],
    "source": [
     "# Close the session\n",
-    "#session.close()"
+    "session.close()"
    ]
   },
   {
